# accounting-automation

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.api  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  (+1 more)
config/: bank_parsers.yaml  budget_thresholds.yaml  chart_of_accounts.yaml  entity_config.yaml  fund_request_config.yaml  merchant_mappings.json  telegram_acl.yaml
dashboard/: .gitignore  Dockerfile  package.json  tailwind.config.js
docs/: .gitkeep  ARCHITECTURE.md
n8n-workflows/: .gitkeep  01-monthly-pl-pipeline-v2.json  01-monthly-pl-pipeline.json  02-credit-card-ingestion-v2.json  02-credit-card-ingestion.json  03-budget-variance-monitor-v2.json  03-budget-variance-monitor.json  04-expense-approval-v2.json  04-expense-approval.json  05-payroll-transfer-v2.json  05-payroll-transfer.json  06-bank-reconciliation-v2.json  06-bank-reconciliation.json  07-tax-filing-support-v2.json  07-tax-filing-support.json  08-telegram-command-handler-v2.json  08-telegram-command-handler.json  09-daily-weekly-reports-v2.json  09-daily-weekly-reports.json  10-fund-request-generator-v2.json  10-fund-request-generator.json  simple-telegram-bot.json
prompts/: .gitkeep  anomaly_detection.md  budget_analysis.md  classify_transaction.md  pdf_ocr_extract.md  report_narrative.md
python/: Dockerfile  requirements.txt
scripts/: setup.sh
sql/: schema.sql  seed_merchants.sql
tests/: __init__.py  conftest.py  test_bank.py  test_budget_variance.py  test_card_processor.py  test_fund_request.py  test_pl_generator.py  test_tax.py  test_telegram.py
(+69 files in other folders)
